# AgentBay-Python-SDK-legacy

./: .gitignore  INSTALLATION.md  README.md  READMEnew.md  __init__.py  _version.py  example_usage.py  integration_example.py  mock_backend.py  pyproject.toml  requirements.txt  setup.py  sliding_ttl_demo.py  test_sliding_ttl.py
.cursor rules/: filepath.mdc  overview.mdc
AI_HR_Agent.egg-info/: PKG-INFO  SOURCES.txt
Tracker-llm/: __init__.py  anthropic.py  grok.py  manual.py  metrics.py  otel.py
agent_operations_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bay_frameworks/: README.md  __init__.py
bay_frameworks/helpers/: __init__.py  serialization.py  version.py
bay_frameworks/instrumentation/: __init__.py
bay_frameworks/instrumentation/agentic_frameworks/: __init__.py
bay_frameworks/instrumentation/agentic_frameworks/ag2/: __init__.py  instrumentor.py
bay_frameworks/instrumentation/agentic_frameworks/agno/: __init__.py  instrumentor.py  wrappers.py
bay_frameworks/instrumentation/agentic_frameworks/crewai/: __init__.py  instrumentation.py
bay_frameworks/instrumentation/agentic_frameworks/google_adk/: __init__.py  instrumentor.py  patch.py
bay_frameworks/instrumentation/agentic_frameworks/haystack/: __init__.py  instrumentor.py
bay_frameworks/instrumentation/agentic_frameworks/langgraph/: __init__.py  attributes.py  instrumentation.py
bay_frameworks/instrumentation/agentic_frameworks/openai_agents/: __init__.py  exporter.py  instrumentor.py  processor.py
bay_frameworks/instrumentation/agentic_frameworks/smolagents/: __init__.py  instrumentor.py
bay_frameworks/instrumentation/agentic_frameworks/xpander/: __init__.py  context.py  instrumentor.py  trace_probe.py  version.py
bay_frameworks/instrumentation/common/: __init__.py  attributes.py  instrumentor.py  metrics.py  span_management.py  token_counting.py  wrappers.py
bay_frameworks/logging/: __init__.py
bay_frameworks/semconv/: __init__.py  agent.py  core.py  enum.py  instrumentation.py  message.py  meters.py  resource.py  span_attributes.py  span_kinds.py  status.py  tool.py  workflow.py
comp-tracker/: __init__.py  attributes.py  config.py  resource.py
comp_tracking/: EXAMPLES.md  __init__.py  metrics.py  system.py  tracker.py
llm_tracking/: EXAMPLES.md  anthropic.py  config.py  gemini.py  grok.py  manual.py  metrics.py  openai.py  otel.py  watsonx.py
security_monitor/: README.md  __init__.py  analyzers.py  compliance.py  context_monitor.py  core.py  detectors.py  reporting.py  telemetry.py
tracker/: AgentOper.py  AgentPerform.py  LLMtracker.py  __init__.py  compliance.py  security.py
(+15 files in other folders)
