[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbay"
version = "1.0.0"
description = "Complete AI Agent and System Monitoring SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "psutil",
    "wrapt"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy"
]
