[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbay"
# NOTE: This version should match __version__ in _version.py (single source of truth)
# When updating version, update _version.py first, then sync this value
version = "1.0.0"
description = "Complete AI Agent and System Monitoring SDK"
readme = "README.md"
requires-python = ">=3.8"
# license = {text = "MIT"}  # TODO: Add actual license file and update this
authors = [
    {name = "AgentBay Team"}
]
keywords = [
    "ai",
    "agent",
    "monitoring",
    "observability",
    "opentelemetry",
    "llm",
    "tracking",
    "telemetry",
    "instrumentation",
    "langgraph",
    "crewai",
    "system-monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "psutil>=5.8.0",
    "wrapt>=1.12.0"
]

[project.urls]
Homepage = "https://github.com/agentbay/agentbay-python-sdk"
Documentation = "https://github.com/agentbay/agentbay-python-sdk#readme"
Repository = "https://github.com/agentbay/agentbay-python-sdk"
Issues = "https://github.com/agentbay/agentbay-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy"
]
